@@ -1,6 +1,9 @@
 Changes between 2.0.2 and 2.0.3.dev
 ----------------------------------------------
 
+- fix issue34: avoid collection failure with "test" prefixed classes
+  deriving from object.
+
 - don't require zlib (and other libs) for genscript plugin without
   --genscript actually being used.
 
